@@ -28,9 +28,9 @@
                 <property name="can_default">yes</property>
                 <property name="can_focus">yes</property>
                 <property name="visible">yes</property>
-                <property name="label" translatable="yes">gtk-help</property>
+                <property name="label" translatable="yes">gtk-apply</property>
                 <property name="use_stock">yes</property>
-<!--                <property name="response-id">-11</property>-->
+                <property name="response_id">1</property>
                 <property name="use_underline">yes</property>
               </widget>
             </child>
@@ -39,7 +39,7 @@
               <widget class="GtkButton" id="button12">
                 <property name="can_default">yes</property>
                 <property name="can_focus">yes</property>
-<!--                <property name="response-id">-7</property>-->
+                <property name="response_id">2</property>
                 <property name="visible">yes</property>
                 <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">yes</property>
