@@ -1,3 +1,7 @@
+2002-02-10  Richard Hestilow  <hestilow@ximian.com>
+
+	* Make dialog Apply/Close.
+
 Fri Feb  8 23:53:10 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-keyboard-properties.c (dialog_response): hook up buttons.
